add all changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <title>Marico</title>
   </head>
-  <body>
+  <body style="background-color: black">
     <!-- HEADER -->
     <header>
       <section class="container">
@@ -97,8 +97,146 @@
         <p class="step">step 1</p>
         <h2 class="step-title">Connect Your Content</h2>
         <p class="step-prg">Bring all of your content together and get a Homepage that automatically updates whenever you create anywhere online.</p>
-        <a class="ctep-button offer-wiew" href="#">View Avaliable Sources</a>
+        <a class="step-button offer-wiew" href="#">View Avaliable Sources</a>
       </div>
     </div>
+
+    <!-- HERO -->
+
+    <div class="container homepage">
+      <div class="homepage-wrapper">
+        <p class="homepage-prg">Your home page</p>
+
+        <h2 class="homepage-title">
+          Your Content <br />
+          All in One <span class="title-spam"> One Spot</span>
+        </h2>
+
+        <div class="homepage-div">
+          <span class="number">1</span>
+          <p class="number-text">Bring all of your content together into one homepage.</p>
+        </div>
+
+        <div class="homepage-div">
+          <span class="number">2</span>
+          <p class="number-text">Bring all of your content together into one homepage.</p>
+        </div>
+
+        <div class="home-button">
+          <a href="#" class="homelink-1">Get Started Now</a>
+          <a href="#" class="homelink-2">View A Demo</a>
+        </div>
+      </div>
+
+      <img src="img/tyler.png" alt="Taylor Swift" width="820" height="591" />
+    </div>
+
+    <!-- STEP TWO -->
+    <div class="container">
+      <div class="step-one">
+        <p class="step">step 2</p>
+        <h2 class="step-title">Share Your Homepage</h2>
+        <p class="step-prg">Share your Wavium homepage link with your followers, and we'll handle the rest.</p>
+      </div>
+    </div>
+
+    <div class="container">
+      <section class="one-link">
+        <div class="onelink-wrapper">
+          <h3 class="onelink-title">One Link</h3>
+          <h2 class="onelink-text">
+            ALL You. <br />
+            <span class="onelink-span">One Link</span>
+            <img src="img/Mobile.png" alt="mobile" width="738" height="268" />
+          </h2>
+        </div>
+        <div class="base">
+          <h2 class="base-title">Collect Subscribers</h2>
+          <h2 class="base-text">
+            Emails. <br />
+            Phone #s. <br />
+            <span class="base-span">ALL Yours</span>
+          </h2>
+        </div>
+      </section>
+      <nav class="onelink-button"><a href="#" class="offer-get"> Get Started </a></nav>
+    </div>
+
+    <!-- STEP THREE -->
+    <div class="container">
+      <div class="step-one">
+        <p class="step">step 3</p>
+        <h2 class="step-title">Send Emails & Text Messages</h2>
+        <p class="step-prg">No more going through a social platform. Reach and engage your audience directly over email and text massage.</p>
+      </div>
+    </div>
+
+    <div class="container homepage">
+      <div class="homepage-wrapper">
+        <p class="homepage-prg">Create & Share</p>
+
+        <h2 class="homepage-title">
+          Reach Your audience <br />
+          All in One <span class="title-spam"> directly</span>
+        </h2>
+
+        <div class="homepage-div">
+          <span class="number">1</span>
+          <p class="number-text">Embed content or create something new to share.</p>
+        </div>
+
+        <div class="homepage-div">
+          <span class="number">2</span>
+          <p class="number-text">Share content over email, text message or your homepage.</p>
+        </div>
+
+        <div class="home-button">
+          <a href="#" class="homelink-1">Get Started Now</a>
+          <a href="#" class="homelink-2">View A Demo</a>
+        </div>
+      </div>
+
+      <img src="img/blackpink.png" alt="Taylor Swift" width="820" height="591" />
+    </div>
+
+    <!-- SCREEN -->
+
+    <div class="container screen">
+      <h2 class="screen-title">Experts Agree</h2>
+      <img src="img/imgscreen.png" alt="message" width="1750px" height="442" />
+    </div>
+
+    <div class="container background">
+      <h3 class="background-text">We've helped over 1,000 creatorsre claim control of their audience.</h3>
+    </div>
+
+    <div class="container started">
+      <div class="started-logo"><img src="img/Logo.svg" alt="" /></div>
+      <h2 class="start-title">Get Started Now</h2>
+
+      <p class="start-prg">Setup is easy and takes under 5 minutes.</p>
+      <nav class="started-link"><a href="#" class="offer-get started-link">Get Started</a></nav>
+
+      <div class="start-wrapper">
+        <img src="img/Dot.svg" alt="dot" />
+        <span style="font-family: Poppins, sans-serif; font: 2em sans-serif">1000+</span>
+        <p class="start-member">creators have already started</p>
+      </div>
+    </div>
+
+    <!-- FOOTER -->
+
+    <footer class="container footer">
+      <div class="footer-logo">
+        <a href="/"><img src="img/Company_logo.svg" alt="/" /></a>
+      </div>
+
+      <ul class="footer-ul">
+        <li class="footer-li"><a href="#" class="footer-link">About </a></li>
+        <li class="footer-li"><a href="#" class="footer-link">Pricing </a></li>
+        <li class="footer-li"><a href="#" class="footer-link">Blog </a></li>
+        <li class="footer-li"><a href="#" class="footer-link">Sign in </a></li>
+      </ul>
+    </footer>
   </body>
 </html>
