--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           </ul>
 
           <div class="button">
-            <a href="#" class="down1">Login</a>
-            <a href="#" class="down2">Sign Up</a>
+            <a href="#" class="login">Login</a>
+            <a href="#" class="sign-up">Sign Up</a>
           </div>
         </nav>
       </section>
@@ -229,6 +229,7 @@
     <footer class="container footer">
       <div class="footer-logo">
         <a href="/"><img src="img/Company_logo.svg" alt="/" /></a>
+        <p><a class="creator" href="https://t.me/raekiri">Created by Muhammadsharif Ahmadov</a></p>
       </div>
 
       <ul class="footer-ul">
